<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bed"
    android:orientation="vertical"
    android:id="@+id/main">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="#33ffffff"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/amazing1" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/CustomtextviewStyle"
            android:text="@string/home"
            android:id="@+id/textView"
            android:capitalize="characters" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                style="@style/customStyle"
                android:id="@+id/textView2"
                android:onClick="sign"
                android:layout_weight="1"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign"
                style="@style/customStyle"
                android:id="@+id/textView3"
                android:layout_weight="1"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/face"
            style="@style/customStyle"
            android:id="@+id/textView4"
            android:onClick="home" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            style="@style/customStyle1"
            android:id="@+id/textView5" />

    </LinearLayout>

</LinearLayout>
